# tetris-engine-in-rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
ref/: tetrio.md  tetrisEngine.py
src/: bfs.rs  board.rs  constants.rs  engine.rs  garbage.rs  lib.rs  parity.rs  piece.rs  python.rs  rng.rs  rotation.rs  scoring.rs
tests/: conftest.py  parity_harness.rs  perf_bfs.rs  test_ref_engine_garbage.py  test_ref_engine_movement.py  test_ref_engine_scoring.py
tests/fixtures/: parity.json
