[package]
name = "tetrisEngine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.22.6", optional = true, features = ["abi3-py310", "extension-module"] }
